--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,17 @@
 {
   "projects": {
     "default": "fcnakahara-page"
+  },
+  "targets": {
+    "fcnakahara-page": {
+      "hosting": {
+        "test": [
+          "fcnakahara-test-page"
+        ],
+        "site": [
+          "fcnakahara-page"
+        ]
+      }
+    }
   }
 }
