--- a/firebase.json
+++ b/firebase.json
@@ -21,7 +21,7 @@
   ],
   "headers": [
     {
-      "source": "**",
+      "source": "**/*",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
