change header souce path

--- a/firebase.json
+++ b/firebase.json
@@ -30,7 +30,7 @@
       ],
       "headers": [
         {
-          "source": "**/*",
+          "source": "*",
           "headers": [
             {
               "key": "Access-Control-Allow-Origin",
