--- a/firebase.json
+++ b/firebase.json
@@ -30,11 +30,15 @@
       ],
       "headers": [
         {
-          "source": "*",
+          "source": "**",
           "headers": [
             {
               "key": "Access-Control-Allow-Origin",
               "value": "*"
+            },
+            {
+              "key": "Access-Control-Allow-Headers",
+              "value": "Origin, X-Requested-With, Content-Type, Accept"
             }
           ]
         }
