--- a/.github/workflows/firebase_deploy.yml
+++ b/.github/workflows/firebase_deploy.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@master
       - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
+        uses: w9jds/firebase-action@v13.5.2
         with:
           args: deploy
         env:
